3 - fix layout bugs with navbar and social links

--- a/src/shared-components/navbar/Navbar.css
+++ b/src/shared-components/navbar/Navbar.css
@@ -12,14 +12,29 @@
 }
 
 .nav-links.active {
-    border: none;
-    background-color: rgba(150, 180, 255, 0.5);
+    background-color: rgba(150, 180, 255, 0.75);
+}
+
+.navbar-nav {
+    flex-direction: row !important;
 }
 
 .nav-link:hover {
     font-weight: bold;
 }
 
+.navbar {
+    justify-content: flex-start !important;
+    flex-direction: row !important;
+}
+
 .navbar-toggler {
-    border: 2px solid var(--bs-navbar-color) !important;
+    min-width: 6rem !important;
+    max-width: 6rem;
+    border: 2px solid rgba(150, 180, 255, 1) !important;
+    background-color: rgba(150, 180, 255, 0.75) !important;
+}
+
+.navbar-toggler:before {
+    display: block;
 }
